syntax = "proto3";

option go_package = ".;service";

service getUserById {
  rpc getUserById(UserRequest) returns (UserResponse) {}
}

message UserRequest {
  string username = 1;
  int64 age = 2;
  string address = 3;
}

message UserResponse {
  int64 code = 1;
  string msg = 2;
  string data = 3;
}